Fix typo to WeScale every where

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Wescale - Expert Cloud et DevOps
+title: WeScale - Expert Cloud et DevOps
 class: home
 jobs_url:
   designer: https://wescale.welcomekit.co/jobs/cloud-designer_paris_WESCA_780wXyk
@@ -50,7 +50,7 @@ jobs_url:
                 <h3><i class="fa fa-cogs" aria-hidden="true"></i></h3>
                 <h3>Réalisation</h3>
                 <p>
-                    Nous vous aidons à concrétiser vos projets, grâce la participation de nos experts collaborant au
+                    Nous vous aidons à concrétiser vos projets, grâce à la participation de nos experts collaborant au
                     quotidien avec vous. Nous développons des plateformes Cloud Native adaptées, et résiliente du
                     développement à la production.
                     <!--Nous construisons les solutions avec et pour nos clients. Notre objectif est de <b>collaborer</b>,
@@ -184,7 +184,7 @@ jobs_url:
                 <a class="portfolio-link" href="{{page.jobs_url.designer}}" target="_blank">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
-                            <i class="fa fa-external-link fa-3x"></i>
+                            <i class="fas fa-external-link-alt fa-3x"></i>
                             <h2>Cloud Designer</h2>
                         </div>
                     </div>
@@ -206,7 +206,7 @@ jobs_url:
                 <a class="portfolio-link" href="{{page.jobs_url.builder}}" target="_blank">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
-                            <i class="fa fa-external-link fa-3x"></i>
+                            <i class="fas fa-external-link-alt fa-3x"></i>
                             <h2>Cloud Builder</h2>
                         </div>
                     </div>
@@ -230,7 +230,7 @@ jobs_url:
                 <a class="portfolio-link" href="{{page.jobs_url.runner}}" target="_blank">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
-                            <i class="fa fa-external-link fa-3x"></i>
+                            <i class="fas fa-external-link-alt fa-3x"></i>
                             <h2>Cloud Runner</h2>
                         </div>
                     </div>
