--- a/wetribu.html
+++ b/wetribu.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Recrutement - Wescale - Improve Together
+title: Recrutement - WeScale - Improve Together
 class: job
 jobs_url:
   designer: https://wescale.welcomekit.co/jobs/cloud-designer_paris_WESCA_780wXyk
@@ -71,7 +71,7 @@ jobs_url:
             <div class="gridder-content col-md-12 col-sm-12 " id="content-cloud-designer" style="display: none;">
                 <div class="col-md-4 middle">
 <a href="{{page.jobs_url.designer}}" class="job-button" target="_blank">
-                         <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Designer</a>
+                         <i class="fas fa-external-link-alt" aria-hidden="true"></i> Devenir Cloud Designer</a>
                 </div>
                 <div class="col-md-8 ">
 Savoir quelle planète aborder dans la constellation du Cloud n’est pas chose simple.
@@ -97,7 +97,7 @@ Le Designer est un expert chevronné qui a déjà accompagné plusieurs expédit
             <div class="gridder-content col-md-12 col-sm-12" id="content-cloud-builder" style="display: none;">
                 <div class="col-md-4 middle">
 <a href="{{page.jobs_url.builder}}" class="job-button" target="_blank">
-                         <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Builder</a>
+                         <i class="fas fa-external-link-alt" aria-hidden="true"></i> Devenir Cloud Builder</a>
                 </div>
                 <div class="col-md-8 ">
 C'est l'explorateur de la mission, il atterrit en premier sur la planète Cloud.
@@ -124,7 +124,7 @@ Le Builder a la charge de débusquer les problèmes, sécuriser l'aire d'atterri
                 <div class="col-md-4 middle">
                     <!--<img src="/images/wetribu/Cosmonaute_33.png">-->
                     <a href="{{page.jobs_url.runner}}" class="job-button" target="_blank">
-                         <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Runner</a>
+                         <i class="fas fa-external-link-alt" aria-hidden="true"></i> Devenir Cloud Runner</a>
                 </div>
                 <div class="col-md-8 ">
 Une fois arrivé dans le Cloud, il est facile de se laisser déborder par la complexité de ce nouveau monde.
@@ -144,7 +144,7 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
             <div class="row">
                 <div class="col-md-12">
 
-                    <h1 class="">Wescale recrute !</h1>
+                    <h1 class="">WeScale recrute !</h1>
                 </div>
             </div>
 
@@ -187,7 +187,7 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
         <div class="welcome-box job-profils vertical-align">
 
             <a href="https://wescale.welcomekit.co" class="job-button" target="_blank">
-                <i class="fa fa-external-link" aria-hidden="true"></i> Découvrir nos offres</a>
+                <i class="fas fa-external-link-alt" aria-hidden="true"></i> Découvrir nos offres</a>
 
         </div>
     </div>
@@ -195,7 +195,7 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
         <div class="row">
             <div class="col-md-8 col-md-offset-4 col-xs-12">
                 <div class="row">
-                    <h2 style="text-align: center">Rejoindre Wescale c'est :</h2>
+                    <h2 style="text-align: center">Rejoindre WeScale c'est :</h2>
                     <div class="col-sm-6 col-md-6">
                         <div style="float: left;">
                             <div class="icon-holder"><i class="fa fa-heartbeat" aria-hidden="true"></i></div>
@@ -277,7 +277,7 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
                     <div class="equipe-mask"></div>
                     <div class="equipe-name">
                         {% if we.job %}
-                        <a href="{{ "wetribu.html" | relative_url }} ">
+                        <a href="https://wescale.welcomekit.co"">
                         {% elsif we.blogname %}
                         <a href="http://blog.wescale.fr/author/{{we.blogname}}">
                         {% endif %}
