--- a/mentions.html
+++ b/mentions.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Mentions légales - Wescale - Improve Togeteher
+title: Mentions légales - WeScale - Improve Togeteher
 class: mentions
 ---
 
@@ -44,7 +44,7 @@ class: mentions
 
               <p>Les informations recueillies lors d’une inscription à une information ou tout autre formulaire (jeux concours, souscription à une offre promotionnelle, newsletters, contacts réseaux sociaux) font l’objet d’un traitement informatique destinées à qualifier nos bases prospects/clients et à exercer des opérations de prospections commerciales.</p>
 
-              <p>Conformément à la loi « informatique et libertés » du 6 janvier 1978 modifiée en 2004, vous bénéficiez d’un droit d’accès et de rectification aux informations qui vous concernent, que vous pouvez exercer en vous adressant par courrier à WeScale, 23 rue Taitbout, 75 009 Paris, ou par email à unsubscribe@wescale.fr.</p>
+              <p>Conformément à la loi « informatique et libertés » du 6 janvier 1978 modifiée en 2004, vous bénéficiez d’un droit d’accès et de rectification aux informations qui vous concernent, que vous pouvez exercer en vous adressant par courrier à WeScale, 23 rue Taitbout, 75 009 Paris, ou par email à unsubscribe@weScale.fr.</p>
 
               <p>Vous pouvez également, pour des motifs légitimes, vous opposer au traitement des données vous concernant.</p>
             </div>
