Fix feedback bastien

--- a/wetribu.html
+++ b/wetribu.html
@@ -54,7 +54,7 @@ jobs_url:
 
             <div class="col-md-4 col-sm-4 portfolio-item white" id="cloud-designer"
                  data-content="#content-cloud-designer">
-                <a class="portfolio-link" href="#">
+                <a class="portfolio-link" href="#cloud-designer">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
                             <i class="fa fa-plus fa-3x"></i>
@@ -70,7 +70,7 @@ jobs_url:
             </div>
             <div class="gridder-content col-md-12 col-sm-12 " id="content-cloud-designer" style="display: none;">
                 <div class="col-md-4 middle">
-<a href="{{page.jobs_url.designer}}" class="job-button" target="_blank">
+<a href="{{page.jobs_url.designer}}" class="job-button button-sm" target="_blank">
                          <i class="fas fa-external-link-alt" aria-hidden="true"></i> Devenir Cloud Designer</a>
                 </div>
                 <div class="col-md-8 ">
@@ -80,7 +80,7 @@ Le Designer est un expert chevronné qui a déjà accompagné plusieurs expédit
 
             <div class="col-md-4 col-sm-4 portfolio-item white" id="cloud-builder"
                  data-content="#content-cloud-builder">
-                <a class="portfolio-link" href="#">
+                <a class="portfolio-link" href="#cloud-builder">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
                             <i class="fa fa-plus fa-3x"></i>
@@ -96,7 +96,7 @@ Le Designer est un expert chevronné qui a déjà accompagné plusieurs expédit
             </div>
             <div class="gridder-content col-md-12 col-sm-12" id="content-cloud-builder" style="display: none;">
                 <div class="col-md-4 middle">
-<a href="{{page.jobs_url.builder}}" class="job-button" target="_blank">
+<a href="{{page.jobs_url.builder}}" class="job-button button-sm" target="_blank">
                          <i class="fas fa-external-link-alt" aria-hidden="true"></i> Devenir Cloud Builder</a>
                 </div>
                 <div class="col-md-8 ">
@@ -106,7 +106,7 @@ Le Builder a la charge de débusquer les problèmes, sécuriser l'aire d'atterri
 
             <div class="col-md-4 col-sm-4 portfolio-item" id="cloud-runner"
                  data-content="#content-cloud-runner">
-                <a class="portfolio-link" href="#">
+                <a class="portfolio-link" href="#cloud-runner">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
                             <i class="fa fa-plus fa-3x"></i>
@@ -123,7 +123,7 @@ Le Builder a la charge de débusquer les problèmes, sécuriser l'aire d'atterri
             <div class="gridder-content col-md-12 col-sm-12" id="content-cloud-runner" style="display: none;">
                 <div class="col-md-4 middle">
                     <!--<img src="/images/wetribu/Cosmonaute_33.png">-->
-                    <a href="{{page.jobs_url.runner}}" class="job-button" target="_blank">
+                    <a href="{{page.jobs_url.runner}}" class="job-button button-sm" target="_blank">
                          <i class="fas fa-external-link-alt" aria-hidden="true"></i> Devenir Cloud Runner</a>
                 </div>
                 <div class="col-md-8 ">
