--- a/mentions.html
+++ b/mentions.html
@@ -8,7 +8,7 @@ class: mentions
       <section>
         <div class="container">
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 white-content">
               <h1 class="title">Mentions légales - WeScale</h1>
             </div>
           </div>
