Remove uppercase in some titles

--- a/formations.html
+++ b/formations.html
@@ -89,7 +89,7 @@ push-date:
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <h2 class="section-heading text-uppercase">Nos prochaines formations</h2>
+                        <h2 class="section-heading">Nos prochaines formations</h2>
                     </div>
                 </div>
                 <div class="row">
