Fix mobile display

--- a/wetribu.html
+++ b/wetribu.html
@@ -172,7 +172,7 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
                         Entrez dans la <b>#WeTribu</b> !
                     </p>
                 </div>
-                <div class="col-md-2 ">
+                <div class="col-md-2 text-center">
                     <a target="_blank" href="https://choosemycompany.com/fr/recrutement/wescale/avis-des-salaries">
                         <img src="{{"/images/wetribu/happy-at-work-18-site.png"| relative_url}}" alt="Happy At Work Startup Index 2018 !">
                     </a>
