Fix ortho and ponctuation

--- a/formations.html
+++ b/formations.html
@@ -115,7 +115,7 @@ push-date:
                                 </div>
                             </div>
                             <p class="push-caption">
-                                <a href="{{ formation.link | relative_url }}" title="Inscription {{formation.short}}">Inscrivez vous</a>
+                                <a href="{{ formation.link | relative_url }}" title="Inscription {{formation.short}}">Inscrivez-vous</a>
                             </p>
                         </div>
                         </a>
