--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ jobs_url:
                <h3><i class="fa fa-lightbulb" aria-hidden="true"></i></h3>
                 <h3>Conseil</h3>
                 <p>
-                    Nous détaillons avec vous l’expression de vos besoins pour mieux comprendre vos enjeux
+                    Nous détaillons avec vous l’expression de vos besoins pour mieux comprendre vos enjeux,
                     et vous accompagnons pour projeter les prochaines évolutions de votre système d’information.<br>
                     Automatisation, Cloud, Conteneurs, BigData, Observabilité, Sécurité, ...
 
@@ -43,7 +43,7 @@ jobs_url:
                 <h3>Réalisation</h3>
                 <p>
                     Nous vous aidons à concrétiser vos projets, grâce à la participation de nos experts collaborant au
-                    quotidien avec vous. Nous développons des plateformes Cloud Native adaptées, et résiliente du
+                    quotidien avec vous. Nous développons des plateformes Cloud Native adaptées et résilientes du
                     développement à la production.
                     <!--Nous construisons les solutions avec et pour nos clients. Notre objectif est de <b>collaborer</b>,
                     c’est
@@ -56,7 +56,7 @@ jobs_url:
                 <h3>Formation</h3>
                 <p>
                     Nous vous formons sur les technologies qui nous passionnent.
-                    Notre catalogue de formation est là pour faire monter en compétences vos équipes. Nous produisons des
+                    Notre catalogue de formations est là pour faire monter en compétences vos équipes. Nous produisons des
                     plans de formation issus de nos expériences de terrain et sommes à même de les adapter à votre
                     contexte.
                     <!--Nos consultants sont <b>certifiés</b> sur les plateformes <b>Cloud public</b> (AWS, Google, Azure)
@@ -104,7 +104,7 @@ jobs_url:
                         <h2 id="nos-techtrends">Nos Techtrends</h2>
                         <p>
                             Chez WeScale, nous avons la mission de partager nos connaissances et de faire grandir
-                            l’expertise autour de nous. Issu de notre expérience terrain, nous réunissons
+                            l’expertise autour de nous. Issus de notre expérience terrain, nous réunissons
                             régulièrement notre savoir-faire sous la forme de TechTrends. Nos TechTrends sont
                             focalisés sur une tendance technologique, ils vous en dressent l’état de l’art et
                             proposent des solutions techniques et méthodologiques pour accompagner son adoption.
@@ -234,7 +234,7 @@ jobs_url:
                             Vous êtes un pro du système, de l'automatisation, du monitoring et du réseau. Vous avez le
                             goût des
                             prods bien huilées et sécurisées. Vous aimez les architectures qui en imposent.
-                            Venez opèrer et faire évoluer les solutions Cloud en lien direct avec les développeurs.
+                            Venez opérer et faire évoluer les solutions Cloud en lien direct avec les développeurs.
                         </p>
                     </div>
                 </a>
