--- a/wetribu.html
+++ b/wetribu.html
@@ -75,7 +75,8 @@ jobs_url:
                 </div>
                 <div class="col-md-8 ">
 Savoir quelle planète aborder dans la constellation du Cloud n’est pas chose simple.
-Le Designer est un expert chevronné qui a déjà accompagné plusieurs expéditions. Il aide à déterminer le meilleur angle d’approche et la cargaison à embarquer vers une architecture idéale.                </div>
+Le Designer est un expert chevronné qui a déjà accompagné plusieurs expéditions. Il aide à déterminer le meilleur angle
+                    d’approche et la cargaison à embarquer vers une architecture idéale.                </div>
             </div>
 
             <div class="col-md-4 col-sm-4 portfolio-item white" id="cloud-builder"
@@ -101,7 +102,8 @@ Le Designer est un expert chevronné qui a déjà accompagné plusieurs expédit
                 </div>
                 <div class="col-md-8 ">
 C'est l'explorateur de la mission, il atterrit en premier sur la planète Cloud.
-Le Builder a la charge de débusquer les problèmes, sécuriser l'aire d'atterrissage et baliser le chemin. Il éclaircit, aplanit et trouve des solutions pour surmonter chaque obstacle rencontré.                </div>
+Le Builder a la charge de débusquer les problèmes, sécuriser l'aire d'atterrissage et baliser le chemin. Il éclaircit,
+                    aplanit et trouve des solutions pour surmonter chaque obstacle rencontré.                </div>
             </div>
 
             <div class="col-md-4 col-sm-4 portfolio-item" id="cloud-runner"
@@ -128,7 +130,8 @@ Le Builder a la charge de débusquer les problèmes, sécuriser l'aire d'atterri
                 </div>
                 <div class="col-md-8 ">
 Une fois arrivé dans le Cloud, il est facile de se laisser déborder par la complexité de ce nouveau monde.
-Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapidement, en gardant un oeil d’expert technique sur les opérations.                </div>
+Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapidement, en gardant un oeil d’expert technique
+                    sur les opérations.                </div>
             </div>
 
         </div>
@@ -155,7 +158,7 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
                         startup !
                     </p>
                     <p>
-                        Mais c’est avant tout <b>une équipe de passionnés</b>, chacun par ses sujets qu’ils soient
+                        Mais c’est avant tout <b>une équipe de passionnés</b>, chacun par ses sujets, qu’ils soient
                         techniques ou non, qui accompagne, avec un brin de folie, ses clients dans <b>la réalisation de
                         leurs projets</b>.
                     </p>
@@ -225,9 +228,9 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
                             <h3 id="decider">Décider</h3>
                             <p>de la destinée de sa société. Nous avons une culture d'entreprise forte de
                                 <b>transparence</b> et de <b>collaboration</b>. Parce que nous n'avons pas la prétention
-                                d'être parfait,
+                                d'être parfaits,
                                 nous
-                                cherchons tous ensemble à nous améliorer et plus généralement, à <b>améliorer la vie</b>
+                                cherchons tous ensemble à nous améliorer, et plus généralement, à <b>améliorer la vie</b>
                                 chez
                                 Wescale.
                                 Chacun a son mot à dire et tout le monde est écouté. Notre but est de grandir et de nous
