Use WTTJ redirects for job pages

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: default
 title: WeScale - Expert Cloud et DevOps
 class: home
 jobs_url:
-  designer: https://wescale.welcomekit.co/jobs/cloud-designer_paris_WESCA_780wXyk
-  builder: https://wescale.welcomekit.co/jobs/cloud-builder_paris
-  runner: https://wescale.welcomekit.co/jobs/cloud-runner_paris_WESCA_KrPy00j
+  designer: https://www.welcometothejungle.co/companies/wescale/jobs/cloud-designer_paris_WESCA_780wXyk
+  builder: https://www.welcometothejungle.co/companies/wescale/jobs/cloud-builder_paris
+  runner: https://www.welcometothejungle.co/companies/wescale/jobs/cloud-runner_paris_WESCA_KrPy00j
 ---
 <section class="home-top">
     <div class="container">
