--- a/wetribu.html
+++ b/wetribu.html
@@ -3,9 +3,9 @@ layout: default
 title: Recrutement - WeScale - Improve Together
 class: job
 jobs_url:
-  designer: https://wescale.welcomekit.co/jobs/cloud-designer_paris_WESCA_780wXyk
-  builder: https://wescale.welcomekit.co/jobs/cloud-builder_paris
-  runner: https://wescale.welcomekit.co/jobs/cloud-runner_paris_WESCA_KrPy00j
+  designer: https://www.welcometothejungle.co/companies/wescale/jobs/cloud-designer_paris_WESCA_780wXyk
+  builder: https://www.welcometothejungle.co/companies/wescale/jobs/cloud-builder_paris
+  runner: https://www.welcometothejungle.co/companies/wescale/jobs/cloud-runner_paris_WESCA_KrPy00j
 ---
 <section id="recrutement-top">
     <div class="container">
@@ -189,7 +189,7 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
     <div class="col-md-4 visible-lg-block visible-md-block image-holder-left">
         <div class="welcome-box job-profils vertical-align">
 
-            <a href="https://wescale.welcomekit.co" class="job-button" target="_blank">
+            <a href="https://www.welcometothejungle.co/companies/wescale" class="job-button" target="_blank">
                 <i class="fas fa-external-link-alt" aria-hidden="true"></i> Découvrir nos offres</a>
 
         </div>
