--- a/formations.html
+++ b/formations.html
@@ -3,40 +3,19 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Formation-XL-Deploy.html"
-      img: "/images/formations/xl-deploy.png"
-      title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 26 au 28 Février 2019 Paris"
-      short: "Formation XL Deploy 3 jours"
-      badge-up: "26 <span>au</span> 28"
-      badge-down: "Fév<br/>2019"
-    - link: "/formations/Formation-Kubernetes.html"
-      img: "/images/formations/kubernetes.png"
-      title: "Ansible"
-      fulltitle: "Formation Kubernetes : 5 et 6 Mars 2019 Paris"
-      short: "Formation Kubernetes 2 jours"
-      badge-up: "5 <span>et</span> 6"
-      badge-down: "Mars<br/>2019"
-    - link: "/formations/Formation-XL-Release.html"
-      img: "/images/formations/xl-release.png"
-      title: "XL Release"
-      fulltitle: "Formation XL Release : 12 et 13 Mars 2019 Paris"
-      short: "Formation XL Release 2 jours"
-      badge-up: "12 <span>et</span> 13"
-      badge-down: "Mars<br/>2019"
-    - link: "/formations/Formation-Kubernetes-avancee.html"
-      img: "/images/formations/Kubernetes-avancee-white.png"
-      title: "Kubernetes Advancée"
-      fulltitle: "Formation Kubernetes Avancée : 26 et 27 Mars 2019 Paris"
-      short: "Formation Kubernetes Avancée 2 jours"
-      badge-up: "26 <span>et</span> 27"
-      badge-down: "Mars<br/>2019"
     - link: "/formations/Formation-Kubernetes.html"
       img: "/images/formations/kubernetes.png"
       title: "Kubernetes"
       fulltitle: "Formation Kubernetes : 11 et 12 Avril 2019 Paris"
       short: "Formation Kubernetes 2 jours"
       badge-up: "11 <span>et</span> 12"
+      badge-down: "Avril<br/>2019"
+    - link: "/formations/Formation-XL-Deploy.html"
+      img: "/images/formations/xl-deploy.png"
+      title: "XL Deploy"
+      fulltitle: "Formation XL Deploy : 15 au 17 Avril 2019 Paris"
+      short: "Formation XL Deploy 3 jours"
+      badge-up: "15 <span>au</span> 17"
       badge-down: "Avril<br/>2019"
     - link: "/formations/Formation-Terraform.html"
       img: "/images/formations/terraform.png"
@@ -66,6 +45,27 @@ push-date:
       short: "Formation Microservices 3 jours"
       badge-up: "4 <span>au</span> 6"
       badge-down: "Juin<br/>2019"
+    - link: "/formations/Formation-Kubernetes-avancee.html"
+      img: "/images/formations/Kubernetes-avancee-white.png"
+      title: "Kubernetes Advancée"
+      fulltitle: "Formation Kubernetes Avancée : 20 et 21 Juin 2019 Paris"
+      short: "Formation Kubernetes Avancée 2 jours"
+      badge-up: "20 <span>et</span> 21"
+      badge-down: "Juin<br/>2019"
+    - link: "/formations/Formation-XL-Deploy.html"
+      img: "/images/formations/xl-deploy.png"
+      title: "XL Deploy"
+      fulltitle: "Formation XL Deploy : 24 au 26 juin 2019 Paris"
+      short: "Formation XL Deploy 3 jours"
+      badge-up: "24 <span>au</span> 26"
+      badge-down: "Juin<br/>2019"
+    - link: "/formations/Formation-XL-Release.html"
+      img: "/images/formations/xl-release.png"
+      title: "XL Release"
+      fulltitle: "Formation XL Release : 2 et 3 Juillet 2019 Paris"
+      short: "Formation XL Release 2 jours"
+      badge-up: "2 <span>et</span> 3"
+      badge-down: "Juillet<br/>2019"
 
 ---
 
