--- a/formations.html
+++ b/formations.html
@@ -62,7 +62,8 @@ push-date:
                 <h1 class="title no-bold">Nous vous <b>formons</b> sur les <b>technologies</b> qui nous <b>passionnent</b></h1>
                 <h2 class="title"><a href="{{ '/formations/Formation-Ansible.html' | relative_url }}" title="Formation Ansible">Ansible</a>,
                     <a href="{{ '/formations/Formation-Docker-Kubernetes.html' | relative_url }}" title="Formation Doker et Kubernetes">Docker</a>,
-                     <a href="{{ '/formations/Formation-Kubernetes.html' | relative_url }}" title="Formation Kubernetes">Kubernetes</a>,
+                    <a href="{{ '/formations/Formation-Git-pour-les-Ops.html' | relative_url }}" title="Formation Git pour les Ops">Git pour les Ops</a>,
+                    <a href="{{ '/formations/Formation-Kubernetes.html' | relative_url }}" title="Formation Kubernetes">Kubernetes</a>,
                     <a href="{{ '/formations/Formation-Terraform.html' | relative_url }}" title="Formation Terraform">Terraform</a>,
                     <a href="{{ '/formations/Formation-XL-Deploy.html' | relative_url }}" title="Formation XL Deploy">XL Deploy</a>,
                     <a href="{{ '/formations/Formation-XL-Release.html' | relative_url }}" title="Formation XL Release">XL Release</a></h2>
