Fix Title mentions

--- a/mentions.html
+++ b/mentions.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Mentions légales - WeScale - Improve Togeteher
+title: Mentions légales - WeScale - Improve Together
 class: mentions
 ---
 
