--- a/formations.html
+++ b/formations.html
@@ -32,7 +32,7 @@ push-date:
       badge-up: "2 <span>et</span> 3"
       badge-down: "Juillet<br/>2019"
     - link: "/formations/Formation-Git-pour-les-Ops.html"
-      img: "/images/formations/git.png"
+      img: "/images/formations/git-pour-les-ops.png"
       title: "Git pour les Ops"
       fulltitle: "Formation Git pour les Ops : 4 juillet 2019 Paris"
       short: "Formation Git pour les Ops 1 jours"
