--- a/formations.html
+++ b/formations.html
@@ -38,6 +38,13 @@ push-date:
       short: "Formation Git pour les Ops 1 jours"
       badge-up: "4"
       badge-down: "Juillet<br/>2019"
+    - link: "/formations/Formation-XL-Deploy.html"
+      img: "/images/formations/xl-deploy.png"
+      title: "XL Deploy"
+      fulltitle: "Formation XL Deploy : 17 au 19 Septembre 2019 Paris"
+      short: "Formation XL Deploy 3 jours"
+      badge-up: "17 <span>au</span> 19"
+      badge-down: "Septembre<br/>2019"
 
 ---
 
