Add CloudRadar FinOps

--- a/index.html
+++ b/index.html
@@ -149,14 +149,35 @@ jobs_url:
                 <div class="col-md-8 col-md-offset-2">
 
                     <div class="techtrends-title">
-                        <h2 id="nos-techtrends">Nos Techtrends</h2>
+                        <h2 id="nos-publications">Nos Publications</h2>
                         <p>
                             Chez WeScale, nous avons la mission de partager nos connaissances et de faire grandir
                             l’expertise autour de nous. Issus de notre expérience terrain, nous réunissons
-                            régulièrement notre savoir-faire sous la forme de TechTrends. Nos TechTrends sont
-                            focalisés sur une tendance technologique, ils vous en dressent l’état de l’art et
-                            proposent des solutions techniques et méthodologiques pour accompagner son adoption.
+                            régulièrement notre savoir-faire sous la forme de CloudRadar. Ces publications sont
+                            focalisées sur une tendance technologique, elles vous en dressent l’état de l’art et
+                            proposent des solutions techniques et méthodologiques pour vous accompagner.
                         </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <div class="techtrends">
+                        <div class="techtrends-image">
+                            <a id="tt-link-conteneurs" href="//info.wescale.fr/cloudradar-finops" target="_blank"><img src="{{"/images/cover-finops.png"|
+                                relative_url }}" alt="CloudRadar FinOps" /></a>
+                        </div>
+                        <div class="techtrends-text">
+                            <h2>CloudRadar FinOps</h2>
+                            <p>
+                               La connaissance fine des modèles de facturation des fournisseurs et des possibilités
+                                offertes par l’automatisation permet d’optimiser la consommation de ressources Cloud.
+                                <br/>
+                                Mais alors, comment maîtriser et optimiser ses coûts d’infrastructure dans le Cloud  ?
+                            </p>
+                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/cloudradar-finops" target="_blank">Télécharger</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
