--- a/formations.html
+++ b/formations.html
@@ -3,48 +3,53 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Formation-Docker-Kubernetes.html"
-      img: "/images/formations/docker-kubernetes.png"
-      title: "Docker et Kubernetes"
-      fulltitle: "Formation Docker et Kubernetes : 27 au 29 Mai 2019 Paris"
-      short: "Formation Docker Kubernetes 3 jours"
-      badge-up: "27 <span>au</span> 29"
-      badge-down: "Mai<br/>2019"
-    - link: "/formations/Formation-Microservices.html"
-      img: "/images/formations/visuelmicroservices.png"
-      title: "Microservices"
-      fulltitle: "Formation Microservices : 4 au 6 Juin 2019 Paris"
-      short: "Formation Microservices 3 jours"
-      badge-up: "4 <span>au</span> 6"
-      badge-down: "Juin<br/>2019"
-    - link: "/formations/Formation-Kubernetes-avancee.html"
-      img: "/images/formations/Kubernetes-avancee-white.png"
-      title: "Kubernetes Advancée"
-      fulltitle: "Formation Kubernetes Avancée : 20 et 21 Juin 2019 Paris"
-      short: "Formation Kubernetes Avancée 2 jours"
-      badge-up: "20 <span>et</span> 21"
-      badge-down: "Juin<br/>2019"
-    - link: "/formations/Formation-XL-Release.html"
-      img: "/images/formations/xl-release.png"
-      title: "XL Release"
-      fulltitle: "Formation XL Release : 2 et 3 Juillet 2019 Paris"
-      short: "Formation XL Release 2 jours"
-      badge-up: "2 <span>et</span> 3"
-      badge-down: "Juillet<br/>2019"
+    - link: "/formations/Formation-Terraform.html"
+      img: "/images/formations/terraform.png"
+      title: "Terraform"
+      fulltitle: "Formation Terraform : 9 et 10 septembre 2019 Paris"
+      short: "Formation Terraform 2 jours"
+      badge-up: "9 <span>au</span> 10"
+      badge-down: "Septembre<br/>2019"
+
     - link: "/formations/Formation-Git-pour-les-Ops.html"
       img: "/images/formations/git-pour-les-ops.png"
-      title: "Git pour les Ops"
-      fulltitle: "Formation Git pour les Ops : 4 juillet 2019 Paris"
-      short: "Formation Git pour les Ops 1 jours"
-      badge-up: "4"
-      badge-down: "Juillet<br/>2019"
-    - link: "/formations/Formation-XL-Deploy.html"
-      img: "/images/formations/xl-deploy.png"
-      title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 17 au 19 Septembre 2019 Paris"
-      short: "Formation XL Deploy 3 jours"
-      badge-up: "17 <span>au</span> 19"
+      title: "Git"
+      fulltitle: "Formation Git : 26 septembre 2019 Paris"
+      short: "Formation Git 1 jour"
+      badge-up: "26"
       badge-down: "Septembre<br/>2019"
+
+    - link: "/formations/Formation-Docker-Kubernetes.html"
+      img: "/images/formations/docker-kubernetes.png"
+      title: "Docker Kubernetes"
+      fulltitle: "Formation Docker Kubernetes : 7 au 9 octobre 2019 Paris"
+      short: "Formation Docker Kubernetes 3 jours"
+      badge-up: "7 <span>et</span> 9"
+      badge-down: "Octobre<br/>2019"
+
+    - link: "/formations/Formation-Ansible.html"
+      img: "/images/formations/Ansible.png"
+      title: "Ansible"
+      fulltitle: "Formation Ansible : 24 et 25 octobre 2019 Paris"
+      short: "Formation Ansible 2 jours"
+      badge-up: "24 <span>et</span> 25"
+      badge-down: "Octobre<br/>2019"
+
+    - link: "/formations/Formation-Kubernetes-avancee.html"
+      img: "/images/formations/kubernetes-advanced.png.png"
+      title: "Kubernetes avancée"
+      fulltitle: "Formation Kubernetes avancée : 16 et 17 décembre 2019 Paris"
+      short: "Formation Kubernetes avancée 2 jours"
+      badge-up: "16<span>et</span>17"
+      badge-down: "Juillet<br/>2019"
+
+    - link: "/formations/Formation-Google-Cloud-Platform.html"
+      img: "/images/formations/Google-cloud-platform.png"
+      title: "Google Cloud Platform"
+      fulltitle: "Formation Google Cloud Platform : 30 et 31 janvier 2020 Paris"
+      short: "Formation Google Cloud Platform 2 jours"
+      badge-up: "30 <span>au</span> 31"
+      badge-down: "Janvier<br/>2020"
 
 ---
 
