--- a/formations.html
+++ b/formations.html
@@ -36,7 +36,7 @@ push-date:
       badge-down: "Octobre<br/>2019"
 
     - link: "/formations/Formation-Kubernetes-avancee.html"
-      img: "/images/formations/kubernetes-advanced.png.png"
+      img: "/images/formations/kubernetes-advanced.png"
       title: "Kubernetes avancée"
       fulltitle: "Formation Kubernetes avancée : 16 et 17 décembre 2019 Paris"
       short: "Formation Kubernetes avancée 2 jours"
