--- a/formations.html
+++ b/formations.html
@@ -41,7 +41,7 @@ push-date:
       fulltitle: "Formation Kubernetes avancée : 16 et 17 décembre 2019 Paris"
       short: "Formation Kubernetes avancée 2 jours"
       badge-up: "16 <span>et</span> 17"
-      badge-down: "Juillet<br/>2019"
+      badge-down: "Décembre<br/>2019"
 
     - link: "/formations/Formation-Google-Cloud-Platform.html"
       img: "/images/formations/Google-cloud-platform.png"
