Add Xebialab Formations

--- a/formations.html
+++ b/formations.html
@@ -8,7 +8,23 @@ push-date:
       title: "Terraform"
       fulltitle: "Formation Terraform : 9 et 10 septembre 2019 Paris"
       short: "Formation Terraform 2 jours"
-      badge-up: "9 <span>au</span> 10"
+      badge-up: "9 <span>et</span> 10"
+      badge-down: "Septembre<br/>2019"
+
+    - link: "/formations/Formation-XL-Deploy.html"
+      img: "/images/formations/xl-deploy.png"
+      title: "XL Deploy"
+      fulltitle: "Formation XL Deploy : 17 au 19 septembre 2019 Paris"
+      short: "Formation XL Deploy 3 jours"
+      badge-up: "17 <span>au</span> 19"
+      badge-down: "Septembre<br/>2019"
+
+    - link: "/formations/Formation-XL-Release.html"
+      img: "/images/formations/xl-release.png"
+      title: "XL Release"
+      fulltitle: "Formation XL Release : 24 et 25 septembre 2019 Paris"
+      short: "Formation XL Release 2 jours"
+      badge-up: "24 <span>et</span> 25"
       badge-down: "Septembre<br/>2019"
 
     - link: "/formations/Formation-Git-pour-les-Ops.html"
@@ -35,21 +51,6 @@ push-date:
       badge-up: "24 <span>et</span> 25"
       badge-down: "Octobre<br/>2019"
 
-    - link: "/formations/Formation-Kubernetes-avancee.html"
-      img: "/images/formations/kubernetes-advanced.png"
-      title: "Kubernetes avancée"
-      fulltitle: "Formation Kubernetes avancée : 16 et 17 décembre 2019 Paris"
-      short: "Formation Kubernetes avancée 2 jours"
-      badge-up: "16 <span>et</span> 17"
-      badge-down: "Décembre<br/>2019"
-
-    - link: "/formations/Formation-Google-Cloud-Platform.html"
-      img: "/images/formations/Google-cloud-platform.png"
-      title: "Google Cloud Platform"
-      fulltitle: "Formation Google Cloud Platform : 30 et 31 janvier 2020 Paris"
-      short: "Formation Google Cloud Platform 2 jours"
-      badge-up: "30 <span>au</span> 31"
-      badge-down: "Janvier<br/>2020"
 
 ---
 
