--- a/formations.html
+++ b/formations.html
@@ -40,7 +40,7 @@ push-date:
       title: "Docker Kubernetes"
       fulltitle: "Formation Docker Kubernetes : 7 au 9 octobre 2019 Paris"
       short: "Formation Docker Kubernetes 3 jours"
-      badge-up: "7 <span>et</span> 9"
+      badge-up: "7 <span>au</span> 9"
       badge-down: "Octobre<br/>2019"
 
     - link: "/formations/Formation-Ansible.html"
