--- a/formations.html
+++ b/formations.html
@@ -3,38 +3,6 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Formation-Terraform.html"
-      img: "/images/formations/terraform.png"
-      title: "Terraform"
-      fulltitle: "Formation Terraform : 10 et 11 septembre 2019 Paris"
-      short: "Formation Terraform 2 jours"
-      badge-up: "10 <span>et</span> 11"
-      badge-down: "Septembre<br/>2019"
-
-    - link: "/formations/Formation-XL-Deploy.html"
-      img: "/images/formations/xl-deploy.png"
-      title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 17 au 19 septembre 2019 Paris"
-      short: "Formation XL Deploy 3 jours"
-      badge-up: "17 <span>au</span> 19"
-      badge-down: "Septembre<br/>2019"
-
-    - link: "/formations/Formation-XL-Release.html"
-      img: "/images/formations/xl-release.png"
-      title: "XL Release"
-      fulltitle: "Formation XL Release : 24 et 25 septembre 2019 Paris"
-      short: "Formation XL Release 2 jours"
-      badge-up: "24 <span>et</span> 25"
-      badge-down: "Septembre<br/>2019"
-
-    - link: "/formations/Formation-Git-pour-les-Ops.html"
-      img: "/images/formations/git-pour-les-ops.png"
-      title: "Git"
-      fulltitle: "Formation Git : 26 septembre 2019 Paris"
-      short: "Formation Git 1 jour"
-      badge-up: "26"
-      badge-down: "Septembre<br/>2019"
-
     - link: "/formations/Formation-Docker-Kubernetes.html"
       img: "/images/formations/docker-kubernetes.png"
       title: "Docker Kubernetes"
@@ -50,6 +18,39 @@ push-date:
       short: "Formation Ansible 2 jours"
       badge-up: "24 <span>et</span> 25"
       badge-down: "Octobre<br/>2019"
+
+    - link: "/formations/Formation-Terraform.html"
+      img: "/images/formations/terraform.png"
+      title: "Terraform"
+      fulltitle: "Formation Terraform : 10 et 11 septembre 2019 Paris"
+      short: "Formation Terraform 2 jours"
+      badge-up: "10 <span>et</span> 11"
+      badge-down: "Septembre<br/>2019"
+
+    - link: "/formations/Formation-XL-Release.html"
+      img: "/images/formations/xl-release.png"
+      title: "XL Release"
+      fulltitle: "Formation XL Release : 13 et 14 novembre 2019 Paris"
+      short: "Formation XL Release 2 jours"
+      badge-up: "13 <span>et</span> 14"
+      badge-down: "Novembre<br/>2019"
+
+    - link: "/formations/Formation-Kubernetes-avancee.html"
+      img: "/images/formations/Kubernetes-avancee-white.png"
+      title: "Kubernetes avancée"
+      fulltitle: "Formation Kubernetes avancée : 16 et 17 décembre 2019 Paris"
+      short: "Formation Kubernetes avancée 2 jours"
+      badge-up: "16 <span>et</span> 17"
+      badge-down: "Décembre<br/>2019"
+
+    - link: "/formations/Formation-Google-Cloud-Platform.html"
+      img: "/images/formations/Google-cloud-platform-white.png"
+      title: "Google Cloud Platform"
+      fulltitle: "Formation Google Cloud Platform : 30 et 31 janvier 2020 Paris"
+      short: "Formation XL Deploy 3 jours"
+      badge-up: "30 <span>et</span> 31"
+      badge-down: "Décembre<br/>2020"
+
 
 
 ---
