--- a/formations.html
+++ b/formations.html
@@ -49,7 +49,7 @@ push-date:
       fulltitle: "Formation Google Cloud Platform : 30 et 31 janvier 2020 Paris"
       short: "Formation XL Deploy 3 jours"
       badge-up: "30 <span>et</span> 31"
-      badge-down: "Décembre<br/>2020"
+      badge-down: "Janvier<br/>2020"
 
 
 
