--- a/formations.html
+++ b/formations.html
@@ -19,20 +19,20 @@ push-date:
       badge-up: "24 <span>et</span> 25"
       badge-down: "Octobre<br/>2019"
 
-    - link: "/formations/Formation-Terraform.html"
-      img: "/images/formations/terraform.png"
-      title: "Terraform"
-      fulltitle: "Formation Terraform : 10 et 11 septembre 2019 Paris"
-      short: "Formation Terraform 2 jours"
-      badge-up: "10 <span>et</span> 11"
-      badge-down: "Septembre<br/>2019"
-
     - link: "/formations/Formation-XL-Release.html"
       img: "/images/formations/xl-release.png"
       title: "XL Release"
       fulltitle: "Formation XL Release : 13 et 14 novembre 2019 Paris"
       short: "Formation XL Release 2 jours"
       badge-up: "13 <span>et</span> 14"
+      badge-down: "Novembre<br/>2019"
+
+    - link: "/formations/Formation-XL-Deploy.html"
+      img: "/images/formations/xl-deploy.png"
+      title: "XL Deploy"
+      fulltitle: "Formation XL Deploy : 5 au 7 novembre 2019 Paris"
+      short: "Formation XL Deploy 2 jours"
+      badge-up: "5 <span>au</span> 7"
       badge-down: "Novembre<br/>2019"
 
     - link: "/formations/Formation-Kubernetes-avancee.html"
