--- a/formations.html
+++ b/formations.html
@@ -23,7 +23,7 @@ push-date:
       img: "/images/formations/xl-deploy.png"
       title: "XL Deploy"
       fulltitle: "Formation XL Deploy : 5 au 7 novembre 2019 Paris"
-      short: "Formation XL Deploy 2 jours"
+      short: "Formation XL Deploy 3 jours"
       badge-up: "5 <span>au</span> 7"
       badge-down: "Novembre<br/>2019"
 
@@ -47,7 +47,7 @@ push-date:
       img: "/images/formations/Google-cloud-platform-white.png"
       title: "Google Cloud Platform"
       fulltitle: "Formation Google Cloud Platform : 30 et 31 janvier 2020 Paris"
-      short: "Formation XL Deploy 3 jours"
+      short: "Formation Google Cloud Platform 2 jours"
       badge-up: "30 <span>et</span> 31"
       badge-down: "Janvier<br/>2020"
 
