--- a/formations.html
+++ b/formations.html
@@ -22,17 +22,9 @@ push-date:
     - link: "/formations/Formation-XL-Deploy.html"
       img: "/images/formations/xl-deploy.png"
       title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 5 au 7 novembre 2019 Paris"
+      fulltitle: "Formation XL Deploy : 12 au 14 novembre 2019 Paris"
       short: "Formation XL Deploy 3 jours"
-      badge-up: "5 <span>au</span> 7"
-      badge-down: "Novembre<br/>2019"
-
-    - link: "/formations/Formation-XL-Release.html"
-      img: "/images/formations/xl-release.png"
-      title: "XL Release"
-      fulltitle: "Formation XL Release : 13 et 14 novembre 2019 Paris"
-      short: "Formation XL Release 2 jours"
-      badge-up: "13 <span>et</span> 14"
+      badge-up: "12 <span>au</span> 14"
       badge-down: "Novembre<br/>2019"
 
     - link: "/formations/Formation-Terraform.html"
@@ -42,6 +34,14 @@ push-date:
       short: "Formation Terraform 2 jours"
       badge-up: "28 <span>et</span> 29"
       badge-down: "Novembre<br/>2019"
+
+    - link: "/formations/Formation-XL-Release.html"
+      img: "/images/formations/xl-release.png"
+      title: "XL Release"
+      fulltitle: "Formation XL Release : 10 et 11 décembre 2019 Paris"
+      short: "Formation XL Release 2 jours"
+      badge-up: "10 <span>et</span> 11"
+      badge-down: "Décembre<br/>2019"
 
     - link: "/formations/Formation-Kubernetes-avancee.html"
       img: "/images/formations/Kubernetes-avancee-white.png"
