--- a/formations.html
+++ b/formations.html
@@ -3,14 +3,6 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Formation-Docker-Kubernetes.html"
-      img: "/images/formations/docker-kubernetes.png"
-      title: "Docker Kubernetes"
-      fulltitle: "Formation Docker Kubernetes : 7 au 9 octobre 2019 Paris"
-      short: "Formation Docker Kubernetes 3 jours"
-      badge-up: "7 <span>au</span> 9"
-      badge-down: "Octobre<br/>2019"
-
     - link: "/formations/Formation-Ansible.html"
       img: "/images/formations/ansible.png"
       title: "Ansible"
@@ -19,13 +11,21 @@ push-date:
       badge-up: "24 <span>et</span> 25"
       badge-down: "Octobre<br/>2019"
 
+    - link: "/formations/Formation-Docker-Kubernetes.html"
+      img: "/images/formations/docker-kubernetes.png"
+      title: "Docker Kubernetes"
+      fulltitle: "Formation Docker Kubernetes : 18 au 20 novembre 2019 Paris"
+      short: "Formation Docker Kubernetes 3 jours"
+      badge-up: "18 <span>au</span> 20"
+      badge-down: "Novembre<br/>2019"
+
     - link: "/formations/Formation-XL-Deploy.html"
       img: "/images/formations/xl-deploy.png"
       title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 12 au 14 novembre 2019 Paris"
+      fulltitle: "Formation XL Deploy : 3 au 5 décembre 2019 Paris"
       short: "Formation XL Deploy 3 jours"
-      badge-up: "12 <span>au</span> 14"
-      badge-down: "Novembre<br/>2019"
+      badge-up: "3 <span>au</span> 5"
+      badge-down: "Décembre<br/>2019"
 
     - link: "/formations/Formation-Terraform.html"
       img: "/images/formations/terraform.png"
