--- a/formations.html
+++ b/formations.html
@@ -35,6 +35,14 @@ push-date:
       badge-up: "13 <span>au</span> 15"
       badge-down: "Janvier<br/>2019"
 
+    - link: "/formations/Formation-Kubernetes.html"
+      img: "/images/formations/kubernetes.png"
+      title: "Kubernetes"
+      fulltitle: "Formation Kubernetes : 5 et 6 mars 2019 Paris"
+      short: "Formation Kubernetes 2 jours"
+      badge-up: "5 <span>et</span> 6"
+      badge-down: "Mars<br/>2019"
+
     - link: "/formations/Formation-Ansible.html"
       img: "/images/formations/ansible.png"
       title: "Ansible"
