--- a/formations.html
+++ b/formations.html
@@ -6,10 +6,10 @@ push-date:
     - link: "/formations/Formation-Docker-Kubernetes.html"
       img: "/images/formations/docker-kubernetes.png"
       title: "Docker Kubernetes"
-      fulltitle: "Formation Docker Kubernetes : 13 au 15 janvier 2020 Paris"
+      fulltitle: "Formation Docker Kubernetes : 5 au 7 février 2020 Paris"
       short: "Formation Docker Kubernetes 3 jours"
-      badge-up: "13 <span>au</span> 15"
-      badge-down: "Janvier<br/>2020"
+      badge-up: "5 <span>au</span> 7"
+      badge-down: "Février<br/>2020"
 
     - link: "/formations/Formation-XL-Deploy.html"
       img: "/images/formations/xl-deploy.png"
