Add meta desc for SEO

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 title: WeScale - Expert Cloud et DevOps
 class: home
+meta_desc: |
+  WeScale vous aide à innover avec le Cloud et la culture DevOps. Conseil, Réalisation et Formation
 jobs_url:
   designer: https://www.welcometothejungle.co/companies/wescale/jobs/cloud-designer_paris_WESCA_780wXyk
   builder: https://www.welcometothejungle.co/companies/wescale/jobs/cloud-builder_paris
